# homonim

./: README.md  README.rst  config.yaml  meta.yaml  pyproject.toml  setup.py
.github/workflows/: install-test-conda-forge.yml  install-test-pypi.yml  install-test-testpypi.yml  install-testpypi.yml  publish-pypi.yml  publish-test.yml  publish-testpypi.yml  publish.yml  run-integration-tests.yml  run-unit-tests.yml  test.yml
data/inputs/: sensor_bands.json
data/test_example/: config.yaml
docs/: _cli.rst  advanced.rst  api.rst  background.rst  case_studies.rst  citation.bib  cli.rst  conf.py  contributing.rst  description.rst  example.rst  index.rst  preparation.rst  requirements.txt  tutorials.rst  usage.md  usage.rst
docs/case_studies/: aerial_mosaic.rst  classification.rst  drone_mosaic.rst  regression_modelling.rst  thumbnail_links.ipynb
docs/examples/: api_example.py  api_tutorial.ipynb  basic_correction.ipynb  gef_case_study.ipynb  regression_modelling.ipynb
homonim/: __init__.py  cli.py  compare.py  enums.py  errors.py  fuse.py  gee_image_utils.py  homonim.py  inspect.py  kernel_model.py  matched_pair.py  raster_array.py  raster_pair.py  refl_bands.py  stats.py  utils.py
scripts/: __init__.py  get_ee_ref_im.py  get_gee_reference_images.py  homogenise.py  test.py
tests/: __init__.py  common.py  conftest.py  downsample_im.py  integration.py  test_api.py  test_compare.py  test_fuse.py  test_fuse_api.py  test_fuse_cli.py  test_homonim.py  test_kernel_model.py  test_matched_pair.py  test_raster_array.py  test_raster_pair.py  test_stats.py
(+35 files in other folders)
